--- a/install/resource.rc
+++ b/install/resource.rc
@@ -43,13 +43,13 @@ BEGIN
 	GROUPBOX "", IDC_STATIC, -5, 198, 310, 40
 END
 
-CREDITSBOX DIALOGEX 0, 0, 220, 180
+CREDITSBOX DIALOGEX 0, 0, 220, 200
 		   FONT 9, "MS Shell Dlg", 0, 0, 0
 		   STYLE WS_SYSMENU | DS_SHELLFONT | DS_CENTER
 		   CAPTION "ImDisk - Credits"
 BEGIN
-	EDITTEXT ID_EDIT1, 0, 0, 220, 155, ES_MULTILINE | ES_READONLY | WS_VSCROLL
-	DEFPUSHBUTTON "OK", IDOK, 94, 161, 43, 13
+	EDITTEXT ID_EDIT1, 0, 0, 220, 175, ES_MULTILINE | ES_READONLY | WS_VSCROLL
+	DEFPUSHBUTTON "OK", IDOK, 94, 181, 43, 13
 END
 
 DOTNETBOX DIALOGEX 0, 0, 269, 102
@@ -76,29 +76,31 @@ BEGIN
 	AUTOCHECKBOX "Remove settings", ID_CHECK2, 15, 40, 160, 10
 END
 
-SETTINGSBOX DIALOGEX 0, 0, 240, 166
+SETTINGSBOX DIALOGEX 0, 0, 240, 200
 			FONT 9, "MS Shell Dlg", 0, 0, 0
 			STYLE WS_SYSMENU | DS_SHELLFONT | DS_CENTER
 			CAPTION "ImDisk - Setup"
 BEGIN
-	GROUPBOX " General Settings ", ID_STATIC1, 6, 6, 228, 135
+	GROUPBOX " General Settings ", ID_STATIC1, 6, 6, 228, 169
+	CONTROL "", IDC_STATIC, "Static", SS_GRAYFRAME, 10, 129, 220, 1
 	AUTOCHECKBOX "Enable entries in context menus", ID_CHECK1, 25, 25, 207, 10
-	PUSHBUTTON "Restore hidden dialog boxes", ID_PBUTTON1, 25, 45, 140, 13
-	PUSHBUTTON "Save Parameters...", ID_PBUTTON2, 25, 106, 110, 13
-	AUTOCHECKBOX "with TEMP Environment Variables", ID_CHECK2, 25, 120, 207, 10
-	DEFPUSHBUTTON "OK", IDOK, 146, 147, 43, 13
-	PUSHBUTTON "Cancel", IDCANCEL, 193, 147, 43, 13
-	LTEXT "", ID_TEXT1, 10, 144, 134, 18
-	GROUPBOX " Hide the following drives in Explorer: ", ID_STATIC2, 15, 67, 211, 28
-	AUTOCHECKBOX "", ID_CHECK_A, 17, 78, 7, 7
-	AUTOCHECKBOX "", ID_CHECK_A + 1, 25, 78, 7, 7
-	CONTROL "A", ID_TEXT2, WC_STATIC, SS_NOPREFIX, 18, 85, 7, 8
-	CONTROL "B", ID_TEXT2 + 1, WC_STATIC, SS_NOPREFIX, 26, 85, 7, 8
+	AUTOCHECKBOX "Don't show Explorer after volume mounting", ID_CHECK2, 25, 40, 207, 10
+	PUSHBUTTON "Restore hidden dialog boxes", ID_PBUTTON1, 25, 104, 140, 13
+	PUSHBUTTON "Save Parameters...", ID_PBUTTON2, 25, 140, 110, 13
+	AUTOCHECKBOX "with TEMP Environment Variables", ID_CHECK3, 25, 154, 207, 10
+	DEFPUSHBUTTON "OK", IDOK, 146, 181, 43, 13
+	PUSHBUTTON "Cancel", IDCANCEL, 193, 181, 43, 13
+	LTEXT "", ID_TEXT1, 10, 178, 134, 18
+	GROUPBOX " Hide the following drives in Explorer: ", ID_STATIC2, 15, 63, 211, 28
+	AUTOCHECKBOX "", ID_CHECK_A, 17, 74, 7, 7
+	AUTOCHECKBOX "", ID_CHECK_A + 1, 25, 74, 7, 7
+	CONTROL "A", ID_TEXT2, WC_STATIC, SS_NOPREFIX, 18, 81, 7, 8
+	CONTROL "B", ID_TEXT2 + 1, WC_STATIC, SS_NOPREFIX, 26, 81, 7, 8
 END
 
 
 1 VERSIONINFO
-FILEVERSION 6,1,0,0
+FILEVERSION 7,0,0,0
 BEGIN
 BLOCK "StringFileInfo"
 	BEGIN
@@ -106,7 +108,7 @@ BLOCK "StringFileInfo"
 		BEGIN
 			VALUE "FileDescription", "ImDisk Toolkit Configuration"
 			VALUE "ProductName", "imdisk"
-			VALUE "ProductVersion", "6.1.0.0"
+			VALUE "ProductVersion", "7.0.0.0"
 		END
 	END
 BLOCK "VarFileInfo"
