--- a/RamDiskUI/resource.rc
+++ b/RamDiskUI/resource.rc
@@ -70,27 +70,28 @@ BEGIN
 	PUSHBUTTON "Synchronize now", ID_PBUTTON2, 28, 176, 100, 13
 END
 
-VAR_DLG DIALOGEX 0, 0, 264, 177
+VAR_DLG DIALOGEX 0, 0, 264, 180
 		STYLE WS_SYSMENU | DS_SHELLFONT
 		FONT 9, "MS Shell Dlg"
 		CAPTION "ImDisk"
 BEGIN
-	GROUPBOX " TEMP Environment Variables ", ID_TITLE, 6, 6, 252, 146
-	GROUPBOX " User ", ID_TEXT1, 12, 20, 241, 40
-	LTEXT "TEMP:", IDC_STATIC, 21, 32, 24, 9
-	EDITTEXT ID_EDIT5, 45, 31, 203, 12, ES_AUTOHSCROLL
-	LTEXT "TMP:", IDC_STATIC, 21, 46, 24, 9
-	EDITTEXT ID_EDIT6, 45, 45, 203, 12, ES_AUTOHSCROLL
-	GROUPBOX " System ", ID_TEXT2, 12, 64, 241, 40
-	LTEXT "TEMP:", IDC_STATIC, 21, 76, 24, 9
-	EDITTEXT ID_EDIT7, 45, 75, 203, 12, ES_AUTOHSCROLL
-	LTEXT "TMP:", IDC_STATIC, 21, 90, 24, 9
-	EDITTEXT ID_EDIT8, 45, 89, 203, 12, ES_AUTOHSCROLL
-	PUSHBUTTON "Set All To:", ID_PBUTTON5, 13, 113, 70, 14
-	EDITTEXT ID_EDIT9, 85, 114, 167, 12, ES_AUTOHSCROLL
-	PUSHBUTTON "Set Defaults", ID_PBUTTON6, 13, 132, 80, 14
-	DEFPUSHBUTTON "OK", IDOK, 170, 158, 43, 13
-	PUSHBUTTON "Cancel", IDCANCEL, 217, 158, 43, 13
+	GROUPBOX "", IDC_STATIC, 6, 5, 252, 78
+	GROUPBOX "", IDC_STATIC, 6, 89, 252, 59
+	AUTORADIOBUTTON "Use Temp Variables", ID_RB1, 10, 13, 230, 10
+	AUTORADIOBUTTON "Use a Junction (recommended)", ID_RB2, 10, 97, 230, 10
+	LTEXT "User:", ID_TEXT1, 10, 30, 46, 9
+	EDITTEXT ID_EDIT1, 56, 29, 194, 12, ES_AUTOHSCROLL
+	LTEXT "System:", ID_TEXT2, 10, 44, 46, 9
+	EDITTEXT ID_EDIT2, 56, 43, 194, 12, ES_AUTOHSCROLL
+	PUSHBUTTON "Set All To:", ID_PBUTTON1, 10, 61, 70, 14
+	EDITTEXT ID_EDIT3, 82, 62, 168, 12, ES_AUTOHSCROLL
+	LTEXT "from:", ID_TEXT3, 10, 114, 37, 9
+	EDITTEXT ID_EDIT4, 47, 113, 203, 12, ES_AUTOHSCROLL
+	LTEXT "to:", ID_TEXT4, 10, 128, 37, 9
+	EDITTEXT ID_EDIT5, 47, 127, 203, 12, ES_AUTOHSCROLL
+	PUSHBUTTON "Set Defaults", ID_PBUTTON2, 6, 160, 80, 14
+	DEFPUSHBUTTON "OK", IDOK, 170, 161, 43, 13
+	PUSHBUTTON "Cancel", IDCANCEL, 217, 161, 43, 13
 END
 
 DYN_DLG DIALOGEX 0, 0, 220, 222
@@ -134,7 +135,7 @@ END
 
 
 1 VERSIONINFO
-FILEVERSION 7,6,0,0
+FILEVERSION 8,0,0,0
 BEGIN
 BLOCK "StringFileInfo"
 	BEGIN
@@ -142,7 +143,7 @@ BLOCK "StringFileInfo"
 		BEGIN
 			VALUE "FileDescription", "RamDisk Configuration Tool"
 			VALUE "ProductName", "imdisk"
-			VALUE "ProductVersion", "7.6.0.0"
+			VALUE "ProductVersion", "8.0.0.0"
 		END
 	END
 BLOCK "VarFileInfo"
