--- a/install/resource.rc
+++ b/install/resource.rc
@@ -7,7 +7,7 @@
 
 1 ICON "..\\VD.ico"
 
-INSTALLBOX DIALOGEX 0, 0, 300, 228
+INSTALLBOX DIALOGEX 0, 0, 300, 239
 		   FONT 9, "MS Shell Dlg", 0, 0, 0
 		   STYLE WS_SYSMENU | DS_SHELLFONT | DS_CENTER
 		   CAPTION "ImDisk - Setup"
@@ -16,31 +16,33 @@ BEGIN
 	CONTROL 1, ID_STATIC2, WC_STATIC, SS_ICON | SS_REALSIZEIMAGE | SS_CENTERIMAGE, 3, 0, 48, 41
 	LTEXT "Welcome to the installer for ImDisk Toolkit.", ID_TEXT1, 54, 8, 244, 18
 	LTEXT "", ID_STATIC3, 54, 27, 246, 13
-	LTEXT "Installation folder:", ID_TEXT9, 10, 52, 78, 10
+	LTEXT "Installation folder:", ID_TEXT10, 10, 52, 78, 10
 	EDITTEXT ID_EDIT1, 89, 50, 182, 12, ES_AUTOHSCROLL
 	PUSHBUTTON "...", ID_PBUTTON1, 273, 50, 16, 12
 	GROUPBOX " Components ", ID_GROUP1, 116, 72, 172, 45
 	AUTOCHECKBOX "ImDisk Virtual Disk Driver (required)", ID_CHECK1, 121, 82, 165, 10
 	AUTOCHECKBOX "DiscUtils library (uses .NET Framework 4)", ID_CHECK2, 121, 93, 165, 10
 	AUTOCHECKBOX "RamDisk Configuration Tool", ID_CHECK3, 121, 104, 165, 10
-	GROUPBOX " Options ", ID_GROUP2, 116, 122, 172, 45
+	GROUPBOX " Options ", ID_GROUP2, 116, 122, 172, 56
 	AUTOCHECKBOX "Enable entries in context menus", ID_CHECK4, 121, 132, 165, 10
 	AUTOCHECKBOX "Create shortcuts on desktop", ID_CHECK5, 121, 143, 165, 10
-	AUTOCHECKBOX "Load ImDskSvc automatically", ID_CHECK6, 121, 154, 165, 10
-	LTEXT "Language:", ID_TEXT10, 116, 178, 50, 10
-	COMBOBOX ID_COMBO1, 166, 176, 80, 24, CBS_DROPDOWNLIST | WS_TABSTOP
-	GROUPBOX "", IDC_STATIC, 10, 70, 93, 121
-	LTEXT "Please keep your mouse over an item to get details.", ID_TEXT2, 14, 77, 85, 112
+	AUTOCHECKBOX "Shortcuts for all users", ID_CHECK6, 121, 154, 165, 10
+	AUTOCHECKBOX "Load ImDskSvc automatically", ID_CHECK7, 121, 165, 165, 10
+	LTEXT "Language:", ID_TEXT11, 116, 189, 50, 10
+	COMBOBOX ID_COMBO1, 166, 187, 80, 24, CBS_DROPDOWNLIST | WS_TABSTOP
+	GROUPBOX "", IDC_STATIC, 10, 70, 93, 132
+	LTEXT "Please keep your mouse over an item to get details.", ID_TEXT2, 14, 77, 85, 123
 	LTEXT "", ID_TEXT3, 105, 79, 10, 12
 	LTEXT "", ID_TEXT4, 105, 90, 10, 12
 	LTEXT "", ID_TEXT5, 105, 101, 10, 12
 	LTEXT "", ID_TEXT6, 105, 129, 10, 12
 	LTEXT "", ID_TEXT7, 105, 140, 10, 12
 	LTEXT "", ID_TEXT8, 105, 151, 10, 12
-	PUSHBUTTON "Credits", ID_PBUTTON2, 5, 209, 43, 13
-	DEFPUSHBUTTON "Install", IDOK, 205, 209, 43, 13
-	PUSHBUTTON "Cancel", IDCANCEL, 252, 209, 43, 13
-	GROUPBOX "", IDC_STATIC, -5, 198, 310, 40
+	LTEXT "", ID_TEXT9, 105, 162, 10, 12
+	PUSHBUTTON "Credits", ID_PBUTTON2, 5, 220, 43, 13
+	DEFPUSHBUTTON "Install", IDOK, 205, 220, 43, 13
+	PUSHBUTTON "Cancel", IDCANCEL, 252, 220, 43, 13
+	GROUPBOX "", IDC_STATIC, -5, 209, 310, 40
 END
 
 CREDITSBOX DIALOGEX 0, 0, 220, 200
@@ -100,7 +102,7 @@ END
 
 
 1 VERSIONINFO
-FILEVERSION 7,1,0,0
+FILEVERSION 8,0,0,0
 BEGIN
 BLOCK "StringFileInfo"
 	BEGIN
@@ -108,7 +110,7 @@ BLOCK "StringFileInfo"
 		BEGIN
 			VALUE "FileDescription", "ImDisk Toolkit Configuration"
 			VALUE "ProductName", "imdisk"
-			VALUE "ProductVersion", "7.1.0.0"
+			VALUE "ProductVersion", "8.0.0.0"
 		END
 	END
 BLOCK "VarFileInfo"
