--- a/RamDiskUI/resource.rc
+++ b/RamDiskUI/resource.rc
@@ -6,68 +6,72 @@
 
 1 ICON "..\\VD.ico"
 
-TAB1 DIALOGEX 0, 0, 200, 220
+TAB1 DIALOGEX 0, 0, 250, 220
 	 FONT 9, "MS Shell Dlg"
 	 STYLE DS_SHELLFONT
 BEGIN
-	GROUPBOX " RamDisk Configuration Tool ", ID_TITLE, 7, 8, 185, 193
-	LTEXT "", ID_TEXT1, 22, 206, 180, 9
-	LTEXT "Size:", ID_TEXT3, 27, 29, 45, 9
-	EDITTEXT ID_EDIT1, 77, 27, 48, 12, ES_NUMBER
-	AUTORADIOBUTTON "KB", ID_RB1, 130, 22, 24, 8
-	AUTORADIOBUTTON "MB", ID_RB2, 130, 30, 24, 8
-	AUTORADIOBUTTON "GB", ID_RB3, 130, 38, 24, 8
-	AUTOCHECKBOX "Allocate Memory Dynamically", ID_CHECK1, 27, 49, 150, 15
-	LTEXT "Drive Letter:", ID_TEXT4, 27, 81, 70, 9
-	COMBOBOX ID_COMBO1, 97, 79, 28, 24, CBS_DROPDOWNLIST | WS_TABSTOP
-	PUSHBUTTON "Unmount", ID_PBUTTON3, 132, 79, 48, 13
-	LTEXT "File System:", ID_TEXT5, 27, 108, 70, 9
-	COMBOBOX ID_COMBO2, 97, 106, 36, 24, CBS_DROPDOWNLIST | WS_TABSTOP
-	AUTOCHECKBOX "Launch at Windows Startup", ID_CHECK2, 27, 133, 150, 15
-	AUTOCHECKBOX "Create TEMP Folder", ID_CHECK3, 27, 154, 150, 15
-	PUSHBUTTON "Set TEMP Variables...", ID_PBUTTON4, 27, 171, 108, 13
+	GROUPBOX " RamDisk Configuration Tool ", ID_TITLE, 7, 8, 235, 193
+	LTEXT "", ID_TEXT1, 22, 206, 220, 9
+	LTEXT "Size:", ID_TEXT3, 49, 29, 45, 9
+	EDITTEXT ID_EDIT1, 99, 27, 48, 12, ES_NUMBER
+	AUTORADIOBUTTON "KB", ID_RB1, 152, 22, 24, 8
+	AUTORADIOBUTTON "MB", ID_RB2, 152, 30, 24, 8
+	AUTORADIOBUTTON "GB", ID_RB3, 152, 38, 24, 8
+	AUTOCHECKBOX "Allocate Memory Dynamically", ID_CHECK1, 49, 49, 150, 15
+	LTEXT "Drive Letter:", ID_TEXT4, 49, 81, 70, 9
+	COMBOBOX ID_COMBO1, 119, 79, 28, 24, CBS_DROPDOWNLIST | WS_TABSTOP
+	PUSHBUTTON "Unmount", ID_PBUTTON3, 154, 79, 48, 13
+	LTEXT "File System:", ID_TEXT5, 49, 108, 70, 9
+	COMBOBOX ID_COMBO2, 119, 106, 36, 24, CBS_DROPDOWNLIST | WS_TABSTOP
+	AUTOCHECKBOX "Launch at Windows Startup", ID_CHECK2, 49, 133, 150, 15
+	AUTOCHECKBOX "Create TEMP Folder", ID_CHECK3, 49, 154, 150, 15
+	PUSHBUTTON "Set TEMP Variables...", ID_PBUTTON4, 49, 171, 108, 13
 END
 
-TAB2 DIALOGEX 0, 0, 200, 220
+TAB2 DIALOGEX 0, 0, 250, 220
 	 FONT 9, "MS Shell Dlg"
 	 STYLE DS_SHELLFONT
 BEGIN
-	GROUPBOX " RamDisk Configuration Tool ", ID_TITLE, 7, 8, 185, 193
-	CONTROL "", IDC_STATIC, "Static", SS_GRAYFRAME, 9, 114, 181, 1
-	CONTROL "", IDC_STATIC, "Static", SS_GRAYFRAME, 9, 161, 181, 1
-	LTEXT "", ID_TEXT1, 22, 206, 200, 9
-	LTEXT "Cluster Size:", ID_TEXT6, 18, 23, 85, 9
-	COMBOBOX ID_COMBO3, 18, 33, 55, 24, CBS_DROPDOWNLIST | WS_TABSTOP
-	LTEXT "Drive Label:", ID_TEXT7, 105, 23, 85, 9
-	EDITTEXT ID_EDIT2, 105, 33, 55, 12, ES_AUTOHSCROLL
-	AUTOCHECKBOX "Quick Format", ID_CHECK4, 18, 53, 172, 10
-	AUTOCHECKBOX "Enable NTFS Compression", ID_CHECK5, 18, 65, 172, 10
-	AUTOCHECKBOX "Use AWE physical memory", ID_CHECK6, 18, 77, 172, 10
-	PUSHBUTTON "Dynamic RamDisk Parameters...", ID_PBUTTON9, 18, 93, 132, 13
-	AUTOCHECKBOX "Use Mount Point:", ID_CHECK7, 18, 123, 117, 10
-	PUSHBUTTON "Unmount", ID_PBUTTON7, 136, 122, 48, 13
-	COMBOBOX ID_COMBO4, 16, 138, 150, 24, CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_TABSTOP
-	PUSHBUTTON "...", ID_PBUTTON8, 168, 138, 16, 13
-	LTEXT "Additional Parameters:", ID_TEXT9, 18, 168, 172, 9
-	EDITTEXT ID_EDIT4, 16, 178, 150, 12, ES_AUTOHSCROLL
-	PUSHBUTTON "...", ID_PBUTTON2, 168, 177, 16, 13
+	GROUPBOX " RamDisk Configuration Tool ", ID_TITLE, 7, 8, 235, 193
+	CONTROL "", IDC_STATIC, "Static", SS_GRAYFRAME, 9, 83, 231, 1
+	CONTROL "", IDC_STATIC, "Static", SS_GRAYFRAME, 9, 125, 231, 1
+	CONTROL "", IDC_STATIC, "Static", SS_GRAYFRAME, 9, 161, 231, 1
+	LTEXT "", ID_TEXT1, 22, 206, 220, 9
+	LTEXT "Cluster Size:", ID_TEXT6, 18, 23, 80, 9
+	COMBOBOX ID_COMBO3, 17, 33, 58, 24, CBS_DROPDOWNLIST | WS_TABSTOP
+	LTEXT "Drive Label:", ID_TEXT7, 18, 52, 80, 9
+	EDITTEXT ID_EDIT2, 17, 62, 58, 12, ES_AUTOHSCROLL
+	AUTOCHECKBOX "Quick Format", ID_CHECK4, 100, 23, 140, 10
+	AUTOCHECKBOX "Enable NTFS Compression", ID_CHECK5, 100, 35, 140, 10
+	AUTOCHECKBOX "Use AWE physical memory", ID_CHECK6, 100, 47, 140, 10
+	PUSHBUTTON "Dynamic RamDisk Parameters...", ID_PBUTTON9, 99, 61, 133, 13
+	AUTOCHECKBOX "Use Mount Point:", ID_CHECK7, 18, 91, 117, 10
+	PUSHBUTTON "Unmount", ID_PBUTTON7, 183, 90, 48, 13
+	COMBOBOX ID_COMBO4, 16, 106, 198, 24, CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_TABSTOP
+	PUSHBUTTON "...", ID_PBUTTON8, 216, 105, 16, 13
+	LTEXT "Run after mounting:", ID_TEXT9, 18, 132, 172, 9
+	EDITTEXT ID_EDIT6, 16, 142, 198, 12, ES_AUTOHSCROLL
+	PUSHBUTTON "...", ID_PBUTTON5, 216, 141, 16, 13
+	LTEXT "Additional Parameters:", ID_TEXT10, 18, 168, 172, 9
+	EDITTEXT ID_EDIT4, 16, 178, 198, 12, ES_AUTOHSCROLL
+	PUSHBUTTON "...", ID_PBUTTON2, 216, 177, 16, 13
 END
 
-TAB3 DIALOGEX 0, 0, 200, 220
+TAB3 DIALOGEX 0, 0, 250, 220
 	 FONT 9, "MS Shell Dlg"
 	 STYLE DS_SHELLFONT
 BEGIN
-	GROUPBOX " RamDisk Configuration Tool ", ID_TITLE, 7, 8, 185, 193
-	LTEXT "", ID_TEXT1, 22, 206, 200, 9
-	LTEXT "Load Content from Image File or Folder:", ID_TEXT2, 18, 25, 172, 9
-	EDITTEXT ID_EDIT3, 16, 35, 150, 12, ES_AUTOHSCROLL
-	PUSHBUTTON "...", ID_PBUTTON1, 168, 34, 16, 13
-	AUTOCHECKBOX "Synchronize at System Shutdown", ID_CHECK8, 18, 58, 172, 10
-	AUTOCHECKBOX "Copy only files with Archive attribute", ID_CHECK9, 28, 75, 162, 10
-	AUTOCHECKBOX "Delete data removed from the RamDisk", ID_CHECK10, 28, 90, 162, 10
-	LTEXT "Excluded Folders:", ID_TEXT8, 28, 107, 162, 9
-	EDITTEXT ID_EDIT5, 28, 117, 145, 49, ES_MULTILINE | ES_WANTRETURN | WS_HSCROLL | WS_VSCROLL
-	PUSHBUTTON "Synchronize now", ID_PBUTTON2, 28, 176, 100, 13
+	GROUPBOX " RamDisk Configuration Tool ", ID_TITLE, 7, 8, 235, 193
+	LTEXT "", ID_TEXT1, 22, 206, 220, 9
+	LTEXT "Load Content from Image File or Folder:", ID_TEXT2, 40, 25, 172, 9
+	EDITTEXT ID_EDIT3, 38, 35, 150, 12, ES_AUTOHSCROLL
+	PUSHBUTTON "...", ID_PBUTTON1, 190, 34, 16, 13
+	AUTOCHECKBOX "Synchronize at System Shutdown", ID_CHECK8, 40, 58, 172, 10
+	AUTOCHECKBOX "Copy only files with Archive attribute", ID_CHECK9, 50, 75, 162, 10
+	AUTOCHECKBOX "Delete data removed from the RamDisk", ID_CHECK10, 50, 90, 162, 10
+	LTEXT "Excluded Folders:", ID_TEXT8, 50, 107, 162, 9
+	EDITTEXT ID_EDIT5, 50, 117, 145, 49, ES_MULTILINE | ES_WANTRETURN | WS_HSCROLL | WS_VSCROLL
+	PUSHBUTTON "Synchronize now", ID_PBUTTON2, 50, 176, 100, 13
 END
 
 VAR_DLG DIALOGEX 0, 0, 264, 180
@@ -135,7 +139,7 @@ END
 
 
 1 VERSIONINFO
-FILEVERSION 8,0,0,0
+FILEVERSION 9,0,0,0
 BEGIN
 BLOCK "StringFileInfo"
 	BEGIN
@@ -143,7 +147,7 @@ BLOCK "StringFileInfo"
 		BEGIN
 			VALUE "FileDescription", "RamDisk Configuration Tool"
 			VALUE "ProductName", "imdisk"
-			VALUE "ProductVersion", "8.0.0.0"
+			VALUE "ProductVersion", "9.0.0.0"
 		END
 	END
 BLOCK "VarFileInfo"
