--- a/install/resource.rc
+++ b/install/resource.rc
@@ -7,26 +7,26 @@
 
 1 ICON "..\\VD.ico"
 
-INSTALLBOX DIALOGEX 0, 0, 300, 228
+INSTALLBOX DIALOGEX 0, 0, 316, 228
 		   FONT 9, "MS Shell Dlg", 0, 0, 0
 		   STYLE WS_SYSMENU | DS_SHELLFONT | DS_CENTER
 		   CAPTION "ImDisk - Setup"
 BEGIN
-	CONTROL "", ID_STATIC1, WC_STATIC, 0, 0, 0, 300, 41
+	CONTROL "", ID_STATIC1, WC_STATIC, 0, 0, 0, 316, 41
 	CONTROL 1, ID_STATIC2, WC_STATIC, SS_ICON | SS_REALSIZEIMAGE | SS_CENTERIMAGE, 3, 0, 48, 41
-	LTEXT "Welcome to the installer for ImDisk Toolkit.", ID_TEXT1, 54, 8, 244, 18
-	LTEXT "", ID_STATIC3, 54, 27, 246, 13
+	LTEXT "Welcome to the installer for ImDisk Toolkit.", ID_TEXT1, 54, 8, 260, 18
+	LTEXT "", ID_STATIC3, 54, 27, 262, 13
 	LTEXT "Installation folder:", ID_TEXT10, 10, 52, 78, 10
-	EDITTEXT ID_EDIT1, 89, 50, 182, 12, ES_AUTOHSCROLL
-	PUSHBUTTON "...", ID_PBUTTON1, 273, 50, 16, 12
-	GROUPBOX " Components ", ID_GROUP1, 116, 72, 172, 45
-	AUTOCHECKBOX "ImDisk Virtual Disk Driver (required)", ID_CHECK1, 121, 82, 165, 10
-	AUTOCHECKBOX "DiscUtils library (uses .NET Framework 4)", ID_CHECK2, 121, 93, 165, 10
-	AUTOCHECKBOX "RamDisk Configuration Tool", ID_CHECK3, 121, 104, 165, 10
-	GROUPBOX " Options ", ID_GROUP2, 116, 122, 172, 45
-	AUTOCHECKBOX "Enable entries in context menus", ID_CHECK4, 121, 132, 165, 10
-	AUTOCHECKBOX "Create shortcuts on desktop", ID_CHECK5, 121, 143, 165, 10
-	AUTOCHECKBOX "Shortcuts for all users", ID_CHECK6, 121, 154, 165, 10
+	EDITTEXT ID_EDIT1, 89, 50, 198, 12, ES_AUTOHSCROLL
+	PUSHBUTTON "...", ID_PBUTTON1, 289, 50, 16, 12
+	GROUPBOX " Components ", ID_GROUP1, 116, 72, 188, 45
+	AUTOCHECKBOX "ImDisk Virtual Disk Driver (required)", ID_CHECK1, 121, 82, 182, 10
+	AUTOCHECKBOX "DiscUtils library (uses .NET Framework 4.8)", ID_CHECK2, 121, 93, 182, 10
+	AUTOCHECKBOX "RamDisk Configuration Tool", ID_CHECK3, 121, 104, 182, 10
+	GROUPBOX " Options ", ID_GROUP2, 116, 122, 188, 45
+	AUTOCHECKBOX "Enable entries in context menus", ID_CHECK4, 121, 132, 182, 10
+	AUTOCHECKBOX "Create shortcuts on desktop", ID_CHECK5, 121, 143, 182, 10
+	AUTOCHECKBOX "Shortcuts for all users", ID_CHECK6, 121, 154, 182, 10
 	LTEXT "Language:", ID_TEXT11, 116, 178, 50, 10
 	COMBOBOX ID_COMBO1, 166, 176, 80, 24, CBS_DROPDOWNLIST | WS_TABSTOP
 	GROUPBOX "", IDC_STATIC, 10, 70, 93, 121
@@ -38,9 +38,9 @@ BEGIN
 	LTEXT "", ID_TEXT7, 105, 140, 10, 12
 	LTEXT "", ID_TEXT8, 105, 151, 10, 12
 	PUSHBUTTON "Credits", ID_PBUTTON2, 5, 209, 43, 13
-	DEFPUSHBUTTON "Install", IDOK, 205, 209, 43, 13
-	PUSHBUTTON "Cancel", IDCANCEL, 252, 209, 43, 13
-	GROUPBOX "", IDC_STATIC, -5, 198, 310, 40
+	DEFPUSHBUTTON "Install", IDOK, 221, 209, 43, 13
+	PUSHBUTTON "Cancel", IDCANCEL, 268, 209, 43, 13
+	GROUPBOX "", IDC_STATIC, -2, 198, 320, 40
 END
 
 CREDITSBOX DIALOGEX 0, 0, 220, 200
@@ -57,8 +57,8 @@ DOTNETBOX DIALOGEX 0, 0, 269, 102
 		  FONT 9, "MS Shell Dlg", 0, 0, 0
 		  CAPTION "ImDisk - Setup"
 BEGIN
-	CONTROL "Installation finished.\n\nHowever, .NET Framework 4 is not present on your system.\nWithout it, you will not be able to mount some image file formats.\n\n"
-			"Please visit the <a href=""https://www.microsoft.com/en-us/download/details.aspx?id=17113"">Microsoft Download Center</a> to download installer.", ID_LINK, WC_LINK, 0, 42, 12, 220, 60
+	CONTROL "Installation finished.\n\nHowever, .NET Framework 4.8 is not present on your system.\nWithout it, you will not be able to mount some image file formats.\n\n"
+			"Please visit the <a href=""https://dotnet.microsoft.com/download/dotnet-framework/net48"">Microsoft Download Center</a> to download installer.", ID_LINK, WC_LINK, 0, 42, 12, 220, 60
 	DEFPUSHBUTTON "OK", IDOK, 113, 83, 43, 13
 	GROUPBOX "", IDC_STATIC, -5, 72, 280, 40
 END
@@ -101,7 +101,7 @@ END
 
 
 1 VERSIONINFO
-FILEVERSION 10,0,0,0
+FILEVERSION 11,0,0,0
 BEGIN
 BLOCK "StringFileInfo"
 	BEGIN
@@ -109,7 +109,7 @@ BLOCK "StringFileInfo"
 		BEGIN
 			VALUE "FileDescription", "ImDisk Toolkit Configuration"
 			VALUE "ProductName", "imdisk"
-			VALUE "ProductVersion", "10.0.0.0"
+			VALUE "ProductVersion", "11.0.0.0"
 		END
 	END
 BLOCK "VarFileInfo"
